--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,19 @@
 <resources>
     <string name="app_name">Userbanksampah</string>
     <string name="heading_one">Pungut</string>
+    <string name="welcome">Welcome,</string>
     <string name="heading_two">Setor</string>
     <string name="heading_three">Timbang</string>
     <string name="forgot">Forgot Password</string>
+    <string name="saldo">Saldo Anda :</string>
     <string name="History">Riwayat </string>
     <string name="logout">Keluar </string>
-    <string name="verify">Verifikasi Penarikan</string>
+    <string name="uang">Rp.1.000.000 </string>
+    <string name="angka">085770538454</string>
+    <string name="category">Kategori Sampah</string>
+    <string name="Jenis">Jenis Sampah</string>
+    <string name="name">Phaksi Bangun Asmoro</string>
+    <string name="verify">Penarikan</string>
     <string name="heading_fourth">Tarik Saldo</string>
     <string name="desc_one">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</string>
     <string name="desc_two">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</string>
