menambah fitur max penraikan pada pengajuan penarikan dan format rupiah

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,7 +13,7 @@
     <string name="category">Kategori Sampah</string>
     <string name="Jenis">Jenis Sampah</string>
     <string name="name">Phaksi Bangun Asmoro</string>
-    <string name="verify">Penarikan</string>
+    <string name="verify"> Pengajuan Penarikan</string>
     <string name="heading_fourth">Tarik Saldo</string>
     <string name="desc_one">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</string>
     <string name="desc_two">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</string>
