--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,33 +35,7 @@
     <string name="total">Total</string>
     <string name="gayung">gayung</string>
     <string name="bobots">bobot</string>
-    <string-array name="bulan">
-        <item>Januari</item>
-        <item>Februari</item>
-        <item>Maret</item>
-        <item>April</item>
-        <item>Mei</item>
-        <item>Juni</item>
-        <item>Juli</item>
-        <item>Agustus</item>
-        <item>September</item>
-        <item>Oktober</item>
-        <item>November</item>
-        <item>Desember</item>
-    </string-array>
-    <string-array name="angka">
-        <item>01</item>
-        <item>02</item>
-        <item>03</item>
-        <item>04</item>
-        <item>05</item>
-        <item>06</item>
-        <item>07</item>
-        <item>08</item>
-        <item>09</item>
-        <item>10</item>
-        <item>11</item>
-        <item>12</item>
+    <string name="saldo_kurang">Maaf Saldo anda tidak cukup</string>
+    <string name="gak_bisa_ajuan">Maaf anda belum bisa mengajukan penarikan jumlah transaksi anda kurang dari 3</string>
 
-    </string-array>
 </resources>
