--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,12 +56,12 @@ Sampah tidak berguna yang anda telah kumpulkan telah berubah menjadi uang yang a
     <string name="mutasi_transaksi">Mutasi Transaksi</string>
     <string name="mutasi_pengajuan">Mutasi Pengajuan</string>
     <string name="confirm_password">Confirm Password</string>
-    <string name="profile_page">Profile Page</string>
-    <string name="full_name">Full Name</string>
-    <string name="phone_number">Phone Number</string>
+    <string name="profile_page">Profile Nasabah</string>
+    <string name="full_name">Nama Lengkap</string>
+    <string name="phone_number">No Telepon</string>
     <string name="_085770539399">085770539399</string>
     <string name="logout1">Logout</string>
-    <string name="address">Address</string>
+    <string name="address">Alamat</string>
     <string name="pondok_maharta_blok_a1_no_22">Pondok Maharta Blok A1 No 22</string>
     <string name="password1">Password</string>
     <string name="_123456">123456</string>
